# fastapi-jinja2-postgres-webapp

./: .dockerignore  .env.example  .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.html  CHANGELOG.md  Caddyfile  Dockerfile  README.md  _quarto.yml  build-timings.json  changelog.html  changelog.md  deploy-hetzner.sh  deploy.py  docker-compose.prod.yml  docker-compose.yml  great-docs.yml  index.html  index.md  index.qmd  license.html  llms-full.txt  llms.txt  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml  skills.html
.claude/: settings.local.json
.cursor/rules/: general.mdc  routers.mdc  routers_tests.mdc  sqlmodel.mdc  tests.mdc
.devcontainer/: devcontainer.json  docker-compose.yml  ensure-env.sh  init-env.sh  post-start.sh
.github/workflows/: propagate.yml  publish.yml  release.yml  test.yml
.well-known/agent-skills/: index.json
.well-known/agent-skills/utils/: SKILL.md
docs/: architecture.html  architecture.qmd  authentication.html  authentication.qmd  contributing.html  contributing.qmd  customization.html  customization.qmd  deployment.html  deployment.qmd  index.html  installation.html  installation.qmd  templates.html
docs/static/: documentation.txt  llms.txt
exceptions/: http_exceptions.py
migrations/: add_billing_tables.py  add_communication_preferences.py  align_ownership_cascades.py
reference/: app.html  app.md  index.html  index.md
routers/app/: __init__.py  billing.py
routers/core/: account.py  dashboard.py  invitation.py  organization.py  role.py  user.py
site_libs/bootstrap/: bootstrap.min.css
static/css/: extras.css  styles.css
static/js/: app.js  ui.js
templates/: base.html  index.html
templates/account/: forgot_password.html  login.html  recover_confirm.html  register.html  reset_password.html
templates/base/partials/: footer.html  header.html  navbar_avatar.html  toast.html  (+1 more)
templates/billing/: billing.html
templates/dashboard/: index.html
templates/emails/: email_removed_alert.html  email_verified_alert.html  primary_email_changed.html  verify_new_email.html
templates/errors/: error.html
templates/organization/: organization.html
templates/partials/: communication_preferences_fields.html
templates/users/: profile.html
tests/: conftest.py  test_bootstrap_htmx.py  test_frontend_edge_cases.py  test_get_pages_jinja_integration.py  test_get_partials_render.py  test_htmx.py  test_redirects.py  test_scripts_htmx.py  test_templates.py
tests/browser/: conftest.py  db_helpers.py  test_auth_workflows.py  test_bootstrap_dropdown.py  test_browser_csrf.py  test_invitation_accept_workflow.py  test_mobile_layout_overflow.py  test_org_rbac_workflows.py  test_organization_workflows.py  test_password_validation.py  test_profile_forms.py  test_toast_display.py
tests/frontend/: __init__.py  fixtures.py  helpers.py  redirect_analysis.py
tests/utils/: test_auth.py  test_communication_preferences.py  test_csrf.py  test_db.py  test_dependencies.py  test_images.py  test_models.py  test_rate_limit.py
user-guide/: architecture.html  architecture.md  authentication.html  authentication.md  contributing.html  contributing.md  customization.html  customization.md  deployment.html  deployment.md  installation.html  installation.md
user_guide/: 00-overview.qmd  01-architecture.qmd  02-authentication.qmd  03-installation.qmd  04-customization.qmd  05-deployment.qmd  06-contributing.qmd  07-billing.qmd
utils/: htmx.py
utils/app/: __init__.py  billing.py  credentials.py  enums.py  models.py  stripe_billing.py
utils/core/: auth.py  communication_preferences.py  csrf.py  db.py  dependencies.py  enums.py  htmx.py  images.py  invitations.py  models.py  organizations.py  rate_limit.py
(+25 files in other folders)
