[project]
name = "fastapi-jinja2-postgres-webapp"
version = "1.1.0"
description = "A template webapp with a pure-Python FastAPI backend, frontend templating with Jinja2, and a Postgres database to power user auth"
readme = "README.md"
package-mode = false
authors = [
    {name = "Christopher Carroll Smith", email = "chriscarrollsmith@gmail.com"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "sqlmodel<1.0.0,>=0.0.22",
    "pyjwt<3.0.0,>=2.10.1",
    "jinja2<4.0.0,>=3.1.4",
    "uvicorn<1.0.0,>=0.32.0",
    "pydantic[email]<3.0.0,>=2.9.2",
    "python-multipart<1.0.0,>=0.0.17",
    "python-dotenv<2.0.0,>=1.0.1",
    "resend<3.0.0,>=2.4.0",
    "bcrypt<5.0.0,>=4.2.0",
    "fastapi<1.0.0,>=0.115.5",
    "pillow>=11.0.0",
    "modal>=0.73.162",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "graphviz<1.0.0,>=0.20.3",
    "jupyter<2.0.0,>=1.1.1",
    "notebook<8.0.0,>=7.2.2",
    "pytest>=8.3.3",
    "sqlalchemy-schemadisplay<3.0,>=2.0",
    "ty>=0.0.21",
    "ruff>=0.15.5",
    "pytest-jinja-check[fastapi]>=1.0.3",
    "pytest-playwright>=0.7.2",
    "pre-commit>=4.6.0",
    "python-semantic-release>=10.5.3",
    "great-docs>=0.14.1",
]

[tool.ty.rules]
# SQLModel/SQLAlchemy metaclass attributes (__table__) and constructor
# patterns are not understood by ty, nor is pytest's @_with_exception
# decorator on pytest.fail, nor resend library type stubs.
invalid-argument-type = "warn"
unresolved-attribute = "warn"
missing-argument = "warn"

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
# pytest.fail uses @_with_exception decorator that ty doesn't understand,
# SQLModel constructors have metaclass-generated parameters, and
# Response.body type is overly broad in stubs.
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
missing-argument = "ignore"

[tool.semantic_release]
assets = []
build_command_env = []
build_command = ""
commit_message = "chore: release {version} [skip ci]\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = false
no_git_verify = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version:nf"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = []
upload_to_vcs_release = false
